--- a/pages/css/cart.css
+++ b/pages/css/cart.css
@@ -27,7 +27,7 @@ main {
 }
 
 div.cart-row {
-    background-color: var(--light-container);
+    background-color: var(--container);
     margin-left: var(--padding-small);
     margin-right: var(--padding-small);
     margin-bottom: 0;
@@ -69,6 +69,8 @@ input:not(input[type="submit"]){
     width: 50%;
     font-size: var(--font-small);
     margin-top: var(--padding-small);
+    /* Exception */
+    color: var(--light-text);
 }
 
 div.cart-row > div > a.button-delete{
@@ -77,7 +79,7 @@ div.cart-row > div > a.button-delete{
 }
 
 input[type="submit"]{
-    background-color: var(--light-primary-compratore);
+    background-color: var(--buyer);
     margin-top: var(--padding-large);
     margin-left: var(--padding-small);
     width: calc(100% - var(--padding-small) * 2);
