--- a/pages/css/sellerNotification.css
+++ b/pages/css/sellerNotification.css
@@ -6,7 +6,7 @@ h2 {
 }
 
 form > input[type="submit"] {
-    background-color: var(--light-primary-venditore);
+    background-color: var(--seller);
     transition: none;
     border: none;
 }
